--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body{
     background-color: #f3ffb6;
+    margin-left: 0px;
 
-    justify-content: center;
+    display:flex;
+
+    text-align: center;
+    flex-direction: column;
+    justify-content:space-evenly;
     align-content: center;
 }
 
@@ -35,7 +40,7 @@ h2{
     height:40px;
     background-color: #708d81;
 
-  
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
@@ -48,12 +53,13 @@ h2{
 }
 
 .header{
+    display:flex;
+    justify-content: center;
     text-align: center;
-    width:auto;
-    height: auto;
+    height:auto;
     margin: 10px;
     border-color: black;
-    border-width: 5px;
+    border-width: 4px;
     border-style: solid;
 }
 
@@ -61,5 +67,31 @@ h2{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+}
+
+dl{
+    margin:10px;
+}
+
+dd{
+    margin-left:20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
+ul{
+    height:auto;
+    display:flex; 
+    flex-wrap: wrap; 
+    justify-content: space-evenly; 
+    align-content: space-evenly; 
+    flex-direction: row;
+}
+
+.secretCenter{
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
 }
