--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     background-color: #f3ffb6;
     margin-left: 0px;
-
+    margin-top: 0px;
     display:flex;
-
+    width:100vw;
+    text-decoration-line:none;
     text-align: center;
     flex-direction: column;
     justify-content:space-evenly;
@@ -11,7 +12,7 @@ body{
 }
 
 h1{
-    color: 883677;
+    color: #883677;
     text-shadow: 1px;
     text-align: center;
 }
@@ -29,26 +30,29 @@ h2{
     left:0;
     right:0;
 
+    position:fixed;
+    bottom:0px;
     display:flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
 
 .myButton{
-    width:60px;
+    width:100px;
     height:40px;
     background-color: #708d81;
 
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
     justify-content: center;
+    text-align: center;
     align-content: center;
 
     border-style: solid;
     border-width: 2px;
     border-radius: 5px;
     border-color: black;
+
     color:antiquewhite;
 }
 
@@ -61,9 +65,11 @@ h2{
     border-color: black;
     border-width: 4px;
     border-style: solid;
+    border-radius: 15px;
 }
 
 .sameWidth{
+    width:100vw;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -94,4 +100,62 @@ ul{
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
+}
+
+table{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-color:black;
+    border-collapse: collapse;
+    margin:auto;
+}
+
+td{
+    width:175px;
+    border-style:solid;
+    border-width: 3px;
+}
+
+ol{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: left;
+    text-align: left;
+    list-style-type: none;
+}
+
+li{
+    margin-bottom:30px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.pageTop{
+    width:100vw;
+    height:60px;
+    color:antiquewhite;
+    background-color: #708d81;
+}
+
+
+thead{
+    border:inherit;
+}
+
+th{
+    width:175px;
+    border: inherit;
+    border-style:solid;
+    border-width: inherit;
+    border-color: inherit;
+    border-bottom: none;
+}
+
+.pageTop th{
+    border:none;
 }
