--- a/style.css
+++ b/style.css
@@ -71,11 +71,13 @@ h2{
 .sameWidth{
     width:100vw;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
 }
 
+.pageTop > .sameWidth {
+    justify-content: space-between;
+}
 dl{
     margin:10px;
 }
@@ -109,7 +111,12 @@ table{
     align-items: center;
     border-color:black;
     border-collapse: collapse;
-    margin:auto;
+    margin:none;
+}
+
+.pageTop > .sameWidth > table{
+    margin: 0px;
+    justify-self: right;
 }
 
 td{
@@ -132,14 +139,21 @@ li{
 }
 
 a {
+    color:antiquewhite;
     text-decoration: none;
 }
 
 .pageTop{
-    width:100vw;
-    height:60px;
-    color:antiquewhite;
+    height: 60px; 
+    width: 100vw;
+    margin: 0px; 
     background-color: #708d81;
+    color:antiquewhite;
+
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 30% 40% 15% 15%; 
+    align-items: center; 
 }
 
 
