--- a/style.css
+++ b/style.css
@@ -24,14 +24,11 @@ h2{
 .navBar{
     width:auto;
     height:auto;
-    top:auto;
     margin:20px;
 
     left:0;
     right:0;
 
-    position:fixed;
-    bottom:0px;
     display:flex;
     align-items: center;
     justify-content: space-between;
@@ -72,7 +69,7 @@ h2{
     width:100vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .pageTop > .sameWidth {
@@ -147,6 +144,7 @@ a {
     height: 60px; 
     width: 100vw;
     margin: 0px; 
+    margin-bottom: 30px;
     background-color: #708d81;
     color:antiquewhite;
 
