--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .pageTop > .sameWidth {
