--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+* {
+    font-family:Montserrat ;
+}
+
 body{
     background-color: #f3ffb6;
-    margin-left: 0px;
     margin-top: 0px;
+    margin-left:0px;
     display:flex;
     width:100vw;
     text-decoration-line:none;
-    text-align: center;
+    text-align: left;
     flex-direction: column;
     justify-content:space-evenly;
     align-content: center;
+}
+
+body > p{
+    margin-left:20px;
 }
 
 h1{
@@ -41,7 +51,7 @@ h2{
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
-    text-align: center;
+ 
     align-content: center;
 
     border-style: solid;
@@ -91,8 +101,6 @@ ul{
     height:auto;
     display:flex; 
     flex-wrap: wrap; 
-    justify-content: space-evenly; 
-    align-content: space-evenly; 
     flex-direction: row;
 }
 
@@ -101,6 +109,7 @@ ul{
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
+    margin-bottom:35px;
 }
 
 table{
@@ -111,6 +120,7 @@ table{
     border-color:black;
     border-collapse: collapse;
     margin:none;
+    margin-bottom:40px;
 }
 
 .pageTop > .sameWidth > table{
@@ -122,6 +132,7 @@ td{
     width:175px;
     border-style:solid;
     border-width: 3px;
+    text-align: center;
 }
 
 ol{
@@ -134,6 +145,7 @@ ol{
 }
 
 li{
+    display:flex;
     margin-bottom:30px;
 }
 
@@ -150,6 +162,7 @@ a {
     background-color: #708d81;
     color:antiquewhite;
 
+    
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 30% 40% 15% 15%; 
@@ -164,8 +177,13 @@ th{
     border-width: 3px;
     border-color: inherit;
     border-bottom: none;
+    text-align: center;
 }
 
 .pageTop th{
     border:none;
+}
+
+dt{
+    text-emphasis-style:strong;
 }
