--- a/style.css
+++ b/style.css
@@ -60,7 +60,13 @@ h2{
     border-color: black;
 
     color:antiquewhite;
+
 }
+
+.myButton:hover, .pageTop:hover {
+    background-color: #883677;
+}
+
 
 .header{
     display:flex;
@@ -184,6 +190,7 @@ th{
     border:none;
 }
 
-dt{
-    text-emphasis-style:strong;
+h3{
+    padding:5px;
+    border-width: 3px;
 }
