--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body{
     top:0;
     
-    background-color: #f3ffb6;
+    background-color: #F5DD90;
     margin-top: 0px;
     margin-left:0px;
     display:flex;
@@ -55,7 +55,7 @@ h2{
 .myButton{
     width:100px;
     height:40px;
-    background-color: #708d81;
+    background-color: #883677;
 
     display: flex;
     flex-wrap:wrap;
@@ -65,8 +65,9 @@ h2{
 
     border-style: solid;
     border-width: 2px;
+    border-bottom-width: 10px;
     border-radius: 5px;
-    border-color: black;
+    border-color: #632C56;
 
     color:antiquewhite;
 
@@ -74,6 +75,13 @@ h2{
 
 .myButton:hover{
     background-color: #883677;
+}
+
+.myButton:active{
+    position: relative;
+    top:5px;
+    border-bottom-width: 5px;
+    transition: 0.3s;
 }
 
 
@@ -85,7 +93,7 @@ h2{
     text-align: center;
     height:auto;
     margin: 10px;
-    border-color: black;
+    border-color: #632C56;
     border-width: 4px;
     border-style: solid;
     border-radius: 15px;
@@ -135,7 +143,7 @@ table{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-color:black;
+    border-color:#632C56;
     border-collapse: collapse;
     margin:none;
     margin-bottom:40px;
@@ -179,7 +187,7 @@ a {
     width: 100vw;
     margin: 0px; 
     margin-bottom: 30px;
-    background-color: #708d81;
+    background-color: #883677;
     color:antiquewhite;
 
     
@@ -210,8 +218,8 @@ h3{
 }
 
 .pageTop > a:hover{
-    color:#f3ffb6;
-    border-color: #f3ffb6;
+    color:#F5DD90;
+    border-color: #F5DD90;
     border-width: 3px;
     border-style: solid;
 }
@@ -220,7 +228,8 @@ h3{
     display:block;
     width:12vw;
     height:inherit;
-    background-color: #708d81;
+    background-color: #883677;
+    /*    background-color: #883677; */
     margin:0px;
     padding: 0px;
 }
@@ -261,7 +270,7 @@ h3{
     left:0px;
     top:60px;
     position: absolute;
-    background-color: #708d81;
+    background-color: #883677;
     padding: 7px;
 
     border-bottom-left-radius: 10px;
@@ -271,8 +280,8 @@ h3{
 .dropdownMenu ul li ul li{
     height:40px;
     
-    color:#f3ffb6;
-    background-color: #708d81;
+    color:#F5DD90;
+    background-color: #883677;
     margin-bottom:10px;
 }
 
