--- a/style.css
+++ b/style.css
@@ -71,11 +71,28 @@ h2{
 
     color:antiquewhite;
 
+    transition: 0.3s;
 }
 
 .myButton:hover{
-    background-color: #883677;
+    animation: bounce-right 0.5s;
 }
+
+@keyframes bounce-right {
+    20%{
+        transform: rotate(5deg);
+    }
+    40%{
+        transform: rotate(-5deg);
+    }
+    60%{
+        transform: rotate(-5deg);
+    }
+    80%{
+        transform: rotate(5deg);
+    }
+}
+
 
 .myButton:active{
     position: relative;
@@ -261,8 +278,9 @@ h3{
 }
 
 .dropdownMenu ul li:hover ul{
+    animation: ddmenu 0.1s;
     display:block;
-
+    transition: 1s;
 }
 
 .dropdownMenu ul li ul{
@@ -272,7 +290,7 @@ h3{
     position: absolute;
     background-color: #883677;
     padding: 7px;
-
+    transition:1s;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -307,4 +325,22 @@ h3{
 #unfinishedWarning:hover{
     transition: 0.3s;
     opacity:60%;
+}
+
+@keyframes ddmenu{
+    0%{
+        opacity:0%;
+    }
+    20%{
+        opacity:20%;
+    }
+    50%{
+        opacity:50%;
+    }
+    80%{
+        opacity:80%;
+    }
+    100%{
+        opacity:100%;
+    }
 }
