--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 
 #indexList > li{
     list-style: none;
+    justify-content: left;
 }
+
 
 body{
     top:0;
@@ -16,7 +18,7 @@ body{
     margin-top: 0px;
     margin-left:0px;
     display:flex;
-    width:100vw;
+    width: 100vw;
     text-decoration-line:none;
     text-align: left;
     flex-direction: column;
@@ -60,9 +62,8 @@ h2{
     display: flex;
     flex-wrap:wrap;
     justify-content: center;
- 
     align-content: center;
-
+    align-self: center;
     border-style: solid;
     border-width: 2px;
     border-bottom-width: 10px;
@@ -74,24 +75,6 @@ h2{
     transition: 0.3s;
 }
 
-.myButton:hover{
-    animation: bounce-right 0.5s;
-}
-
-@keyframes bounce-right {
-    20%{
-        transform: rotate(5deg);
-    }
-    40%{
-        transform: rotate(-5deg);
-    }
-    60%{
-        transform: rotate(-5deg);
-    }
-    80%{
-        transform: rotate(5deg);
-    }
-}
 
 
 .myButton:active{
@@ -144,6 +127,8 @@ ul{
     display:flex; 
     flex-wrap: wrap; 
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -297,10 +282,9 @@ h3{
 
 .dropdownMenu ul li ul li{
     height:40px;
-    
     color:#F5DD90;
     background-color: #883677;
-    margin-bottom:10px;
+    margin-bottom:20px;
 }
 
 
@@ -310,8 +294,7 @@ h3{
 
 #unfinishedWarning{
     transition: 0.3s;
-    width:120px;
-    height:fit-content;
+    width:100px;
     background-color: red;
     color:antiquewhite;
     padding: 2px;
@@ -343,4 +326,23 @@ h3{
     100%{
         opacity:100%;
     }
+}
+
+img{
+    transition: 0.2s;
+}
+
+img:hover {
+    transition:0.2s;
+    scale:1.2;
+}
+
+.dropdownMenu img:hover{
+    scale:1;
+}
+
+.myButton:hover{
+    color:#F5DD90;
+    scale:1.05;
+    transition: 0.1s;
 }
